[package]
name = "builderCLI"
description = "Build a CLI rust application in Rust"
version = "0.1.0"
edition = "2021"


[dependencies]
failure = "0.1.2"
failure_derive = "0.1.2"
serde = { version = "1.0.27", optional = true}
serde_derive = { version = "1.0.27", optional = true }
log = "0.4.1"
globwalk = { version = "0.3", optional = true }
rayon = { version = "1.0", optional = true }
clap-verbosity-flag = "0.2.0"
remove_dir_all = { version = "0.5.1", optional = true}
exitfailure = "0.5.1"


[dev-dependencies]
tempfile = "3.0.3"

[features]
default = ["full-throttle"]
full-throttle = [
    "serde",
    "serde_derive",
    "globwalk",
    "rayon",
    "remove_dir_all"
]

